docs: spanish translation

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //font-awesome icons -->
-<link href="//fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Oswald" rel="stylesheet">
 <!-- start-smoth-scrolling -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -89,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">Typography</a></li>
 								</ul>
 							</li> -->
-							<li class="menu__item menu__item--current"><a href="contact.html" class="menu__link">Contacts</a></li>
+							<li class="menu__item menu__item--current"><a href="contact.html" class="menu__link">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
