--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- font-awesome icons -->
 	<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- //font-awesome icons -->
-	<link href="//fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Oswald" rel="stylesheet">
 	<!-- start-smoth-scrolling -->
 	<script type="text/javascript" src="js/move-top.js"></script>
 	<script type="text/javascript" src="js/easing.js"></script>
@@ -96,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li class="menu__item"><a href="index.html" class="menu__link">HomePage</a></li>
 							<li class="menu__item"><a href="about.html" class="menu__link">Legal Areas of Expertise</a></li>
 
-							<li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li>
 							<!-- <li class="dropdown menu__item"> -->
 								<!-- <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown">Testimonials <b class="caret"></b></a>
 								<!-- <ul class="dropdown-menu agile_short_dropdown">
