--- a/contact.html
+++ b/contact.html
@@ -115,82 +115,83 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.4745387275702!2d-80.1667926846233!3d25.88676630972982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b272d71ccf73%3A0x34c2a21a5d39cef2!2s12000+Biscayne+Blvd%2C+Miami%2C+FL+33181!5e0!3m2!1sen!2sus!4v1493073655295" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><!-- //contact -->
 
 <!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="footer-w3layouts">
-				<div class="col-md-3 footer-agileits">
-					<h3>Specialized</h3>
-					<ul>
-						<li>the printing</li>
-						<li>typesetting industry.</li>
-						<li>Lorem Ipsum</li>
-						<li>unknown printer</li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-wthree">
-					<h3>Partners</h3>
-					<ul>
-						<li>unknown printer</li>
-						<li>Lorem Ipsum</li>
-						<li>the printing</li>
-						<li>typesetting industry.</li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-w3-agileits">
-					<h3>Consultation</h3>
-					<ul>
-						<li>typesetting industry.</li>
-						<li>the printing</li>
-						<li>unknown printer</li>
-						<li>Lorem Ipsum</li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-agileits-w3layouts">
-					<h3>Our Links</h3>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-			<div class="footer-w3-agile">
-				<div class="col-md-6 w3l-footer-top">
-					<h3>Newsletter</h3>
-					<form action="#" method="post" class="newsletter">
-						<input class="email" type="email" placeholder="Your email..." required="">
-						<input type="submit" class="submit"  value="">
-					</form>
-					<div class="footer-agile">
-						<div class="col-md-6 footer-w3-1">
-							<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-							<p> 12000 Biscayne Boulevard  </p>
-							<p> Miami, FL 33181. Suite 702</p>
-						</div>
-						<div class="col-md-6 footer-w3l-1">
-							<span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
-							<p> +080 264345 995.</p>
-							<p> +080 264345 996.</p>
-						</div>
-							<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-md-6 w3ls-social-icons">
-					<h3>Follow Us</h3>
-					<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-					<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-					<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-					<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-			<div class="copy-right-agile">
-				<p>© 2017 Executive. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-			</div>
+<div class="footer">
+	<div class="container">
+		<div class="w3ls-social-icons">
+			<h3>Follow Us</h3>
+			<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+			<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+			<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
+			<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
 		</div>
+		<div class="footer-w3layouts">
+
+			<!--<div class="col-md-3 footer-agileits">
+				<h3>Specialized</h3>
+				<ul>
+					<li>the printing</li>
+					<li>typesetting industry.</li>
+					<li>Lorem Ipsum</li>
+					<li>unknown printer</li>
+				</ul>
+			</div>-->
+			<!--<div class="col-md-3 footer-wthree">
+				<h3>Partners</h3>
+				<ul>
+					<li>unknown printer</li>
+					<li>Lorem Ipsum</li>
+					<li>the printing</li>
+					<li>typesetting industry.</li>
+				</ul>
+			</div>-->
+			<!--<div class="col-md-3 footer-w3-agileits">
+				<h3>Consultation</h3>
+				<ul>
+					<li>typesetting industry.</li>
+					<li>the printing</li>
+					<li>unknown printer</li>
+					<li>Lorem Ipsum</li>
+				</ul>
+			</div>-->
+			<!--<div class="col-md-3 footer-agileits-w3layouts">
+				<h3>Our Links</h3>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>-->
+			<div class="clearfix"></div>
+		</div>
+		<div class="footer-w3-agile">
+			<div class="col-md-6 col-md-offset-3 w3l-footer-top ">
+				<!--<h3>Newsletter</h3>
+				<form action="#" method="post" class="newsletter">
+					<input class="email" type="email" placeholder="Your email..." required="">
+					<input type="submit" class="submit" value="">
+				</form>-->
+				<div class="footer-agile">
+					<div class="col-md-6 footer-w3-1 text-center">
+						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+						<p class="text-center"> 7th Street 2nd Line, </p>
+						<p class="text-center"> Melbourne City, Australia.</p>
+					</div>
+					<div class="col-md-6 footer-w3l-1 text-center">
+						<span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
+						<p class="text-center"> +080 264345 995.</p>
+						<p class="text-center"> +080 264345 996.</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+		<!--<div class="copy-right-agile">
+			<p>© 2017 Executive. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+		</div>-->
 	</div>
+</div>
 <!-- //footer -->
 <!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
