--- a/index.html
+++ b/index.html
@@ -401,8 +401,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- footer -->
 	<div class="footer">
 		<div class="container">
+      <div class="w3ls-social-icons">
+        <h3>Follow Us</h3>
+        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+        <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
+        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
 			<div class="footer-w3layouts">
-				<div class="col-md-3 footer-agileits">
+
+				<!--<div class="col-md-3 footer-agileits">
 					<h3>Specialized</h3>
 					<ul>
 						<li>the printing</li>
@@ -410,8 +418,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>Lorem Ipsum</li>
 						<li>unknown printer</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-wthree">
+				</div>-->
+				<!--<div class="col-md-3 footer-wthree">
 					<h3>Partners</h3>
 					<ul>
 						<li>unknown printer</li>
@@ -419,8 +427,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>the printing</li>
 						<li>typesetting industry.</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-w3-agileits">
+				</div>-->
+				<!--<div class="col-md-3 footer-w3-agileits">
 					<h3>Consultation</h3>
 					<ul>
 						<li>typesetting industry.</li>
@@ -428,8 +436,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>unknown printer</li>
 						<li>Lorem Ipsum</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-agileits-w3layouts">
+				</div>-->
+				<!--<div class="col-md-3 footer-agileits-w3layouts">
 					<h3>Our Links</h3>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -437,42 +445,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
-				</div>
+				</div>-->
 				<div class="clearfix"></div>
 			</div>
 			<div class="footer-w3-agile">
-				<div class="col-md-6 w3l-footer-top">
-					<h3>Newsletter</h3>
+				<div class="col-md-6 col-md-offset-3 w3l-footer-top ">
+					<!--<h3>Newsletter</h3>
 					<form action="#" method="post" class="newsletter">
 						<input class="email" type="email" placeholder="Your email..." required="">
 						<input type="submit" class="submit" value="">
-					</form>
+					</form>-->
 					<div class="footer-agile">
-						<div class="col-md-6 footer-w3-1">
+						<div class="col-md-6 footer-w3-1 text-center">
 							<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-							<p> 7th Street 2nd Line, </p>
-							<p> Melbourne City, Australia.</p>
+							<p class="text-center"> 7th Street 2nd Line, </p>
+							<p class="text-center"> Melbourne City, Australia.</p>
 						</div>
-						<div class="col-md-6 footer-w3l-1">
+						<div class="col-md-6 footer-w3l-1 text-center">
 							<span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
-							<p> +080 264345 995.</p>
-							<p> +080 264345 996.</p>
+							<p class="text-center"> +080 264345 995.</p>
+							<p class="text-center"> +080 264345 996.</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 				</div>
-				<div class="col-md-6 w3ls-social-icons">
-					<h3>Follow Us</h3>
-					<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-					<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-					<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-					<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div class="copy-right-agile">
+			<!--<div class="copy-right-agile">
 				<p>© 2017 Executive. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<!-- //footer -->
