standardized format, added pages and links

--- a/es/contact.html
+++ b/es/contact.html
@@ -17,19 +17,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- <link href="css/navmar.css" rel="stylesheet" type="text/css" media="all"> -->
 <!-- js -->
-<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
 <!-- //js -->
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //font-awesome icons -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Oswald" rel="stylesheet">
 <!-- start-smoth-scrolling -->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="../js/move-top.js"></script>
+<script type="text/javascript" src="../js/easing.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="w3_agileits_social_media">
 					<ul>
-						<li class="agileinfo_share">Share On</li>
+						<li class="agileinfo_share">Compartir En</li>
 						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
@@ -77,8 +77,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 					<nav class="menu menu--iris">
 						<ul class="nav navbar-nav menu__list" id="navbar">
-							<li class="menu__item"><a href="index.html" class="menu__link">Homepage</a></li>
-							<li class="menu__item"><a href="services.html" class="menu__link">legal areas of expertise</a></li>
+							<li class="menu__item"><a href="index.html" class="menu__link">Inicio</a></li>
+							<li class="menu__item"><a href="services.html" class="menu__link">Areas Legales</a></li>
 							<!-- <li class="menu__item"><a href="portfolio.html" class="menu__link">Portfolio</a></li>
 							<li class="menu__item"><a href="services.html" class="menu__link">Services</a></li> -->
 							<!-- <li class="dropdown menu__item">
@@ -88,8 +88,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">Typography</a></li>
 								</ul>
 							</li> -->
-							<li class="menu__item menu"><a href="contact.html" class="menu__link">Contact</a></li>
-							<li class="menu__item menu"><a href="es/index.html" class="menu__link">Español</a></li>
+							<li class="menu__item menu"><a href="contact.html" class="menu__link">Contacto</a></li>
+							<li class="menu__item menu"><a href="../index.html" class="menu__link">English</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -104,9 +104,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p>
 			<div class="contact-right-w3-agile">
 			<form action="#" method="post">
-				<input type="text" name="Name" placeholder="Name" required="">
-				<input type="text" name="Number" placeholder="Phone" required="">
-				<textarea name="Comments" placeholder="Message" required=""></textarea>
+				<input type="text" name="Name" placeholder="Nombre" required="">
+				<input type="text" name="Number" placeholder="Telefono" required="">
+				<textarea name="Comments" placeholder="Mensaje" required=""></textarea>
 				<input type="submit" value="Submit">
 			</form>
 		</div>
@@ -119,7 +119,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer">
 	<div class="container">
 		<div class="w3ls-social-icons">
-			<h3>Follow Us</h3>
+			<h3>SÍGANOS</h3>
 			<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
 			<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
 			<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
@@ -195,7 +195,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- //footer -->
 <!-- for bootstrap working -->
-	<script src="js/bootstrap.js"></script>
+	<script src="../js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
 <!-- here stars scrolling icon -->
 	<script type="text/javascript">
