--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<nav class="menu menu--iris">
 						<ul class="nav navbar-nav menu__list">
 							<li class="menu__item"><a href="index.html" class="menu__link">HomePage</a></li>
-							<li class="menu__item"><a href="about.html" class="menu__link">Legal Areas of Expertise</a></li>
+							<li class="menu__item"><a href="services.html" class="menu__link">Legal Areas of Expertise</a></li>
 
 							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li>
+							<li class="menu__item"><a href="es/index.html" class="menu__link">Español</a></li>
 							<!-- <li class="dropdown menu__item"> -->
 								<!-- <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown">Testimonials <b class="caret"></b></a>
 								<!-- <ul class="dropdown-menu agile_short_dropdown">
@@ -103,12 +104,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">Typography</a></li>
 								</ul> -->
 								<!-- </li>
-							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li> -->-->
+							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li> -->
 						</ul>
 					</nav>
 				</div>
 			</nav>
-			<div class="w3l_banner_info">
+			<!-- <div class="w3l_banner_info">
 				<section class="slider">
 					<div class="flexslider">
 						<ul class="slides">
@@ -163,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					});
 				</script>
 				<!-- //flexSlider -->
-			</div>
+			</div> 
 		</div>
 	</div>
 	<!-- //banner -->
