--- a/es/index.html
+++ b/es/index.html
@@ -92,9 +92,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<nav class="menu menu--iris">
 						<ul class="nav navbar-nav menu__list">
 							<li class="menu__item"><a href="index.html" class="menu__link">Inicio</a></li>
-							<li class="menu__item"><a href="about.html" class="menu__link">Areas Legales</a></li>
+							<li class="menu__item"><a href="services.html" class="menu__link">Areas Legales</a></li>
 
 							<li class="menu__item"><a href="contact.html" class="menu__link">Contacto</a></li>
+							<li class="menu__item"><a href="../index.html" class="menu__link">English</a></li>
 							<!-- <li class="dropdown menu__item"> -->
 								<!-- <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown">Testimonials <b class="caret"></b></a>
 								<!-- <ul class="dropdown-menu agile_short_dropdown">
@@ -102,12 +103,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">Typography</a></li>
 								</ul> -->
 								<!-- </li>
-							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li> -->-->
+							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li> -->
 						</ul>
 					</nav>
 				</div>
 			</nav>
-			<div class="w3l_banner_info">
+			<!-- <div class="w3l_banner_info">
 				<section class="slider">
 					<div class="flexslider">
 						<ul class="slides">
@@ -339,7 +340,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- what -->
 	<div class="what-w3ls">
 		<div class="container">
-			<h3 id="bio" class="w3ls_head">Languages</h3>
+			<h3 id="bio" class="w3ls_head">Idiomas</h3>
 			<p class="w3agile"> El Abogado Falzon, utiliza el inglés como su primer idioma, pero sus conocimientos del español, francés e italiano son lo suficientemente avanzados para ser útiles en la comunicación verbal y escrita con clientes u otras personas y con las autoridades en esos idiomas.</p>
 			<div class="what-grids">
 				<div class="col-md-6 what-grid">
@@ -392,8 +393,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- footer -->
 	<div class="footer">
 		<div class="container">
+      <div class="w3ls-social-icons">
+        <h3>Síganos</h3>
+        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+        <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
+        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
 			<div class="footer-w3layouts">
-				<div class="col-md-3 footer-agileits">
+
+				<!--<div class="col-md-3 footer-agileits">
 					<h3>Specialized</h3>
 					<ul>
 						<li>the printing</li>
@@ -401,8 +410,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>Lorem Ipsum</li>
 						<li>unknown printer</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-wthree">
+				</div>-->
+				<!--<div class="col-md-3 footer-wthree">
 					<h3>Partners</h3>
 					<ul>
 						<li>unknown printer</li>
@@ -410,8 +419,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>the printing</li>
 						<li>typesetting industry.</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-w3-agileits">
+				</div>-->
+				<!--<div class="col-md-3 footer-w3-agileits">
 					<h3>Consultation</h3>
 					<ul>
 						<li>typesetting industry.</li>
@@ -419,8 +428,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>unknown printer</li>
 						<li>Lorem Ipsum</li>
 					</ul>
-				</div>
-				<div class="col-md-3 footer-agileits-w3layouts">
+				</div>-->
+				<!--<div class="col-md-3 footer-agileits-w3layouts">
 					<h3>Our Links</h3>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -428,42 +437,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
-				</div>
+				</div>-->
 				<div class="clearfix"></div>
 			</div>
 			<div class="footer-w3-agile">
-				<div class="col-md-6 w3l-footer-top">
-					<h3>Newsletter</h3>
+				<div class="col-md-6 col-md-offset-3 w3l-footer-top ">
+					<!--<h3>Newsletter</h3>
 					<form action="#" method="post" class="newsletter">
 						<input class="email" type="email" placeholder="Your email..." required="">
 						<input type="submit" class="submit" value="">
-					</form>
+					</form>-->
 					<div class="footer-agile">
-						<div class="col-md-6 footer-w3-1">
+						<div class="col-md-6 footer-w3-1 text-center">
 							<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-							<p> 7th Street 2nd Line, </p>
-							<p> Melbourne City, Australia.</p>
+							<p class="text-center"> 7th Street 2nd Line, </p>
+							<p class="text-center"> Melbourne City, Australia.</p>
 						</div>
-						<div class="col-md-6 footer-w3l-1">
+						<div class="col-md-6 footer-w3l-1 text-center">
 							<span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
-							<p> +080 264345 995.</p>
-							<p> +080 264345 996.</p>
+							<p class="text-center"> +080 264345 995.</p>
+							<p class="text-center"> +080 264345 996.</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 				</div>
-				<div class="col-md-6 w3ls-social-icons">
-					<h3>Follow Us</h3>
-					<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-					<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-					<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-					<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div class="copy-right-agile">
+			<!--<div class="copy-right-agile">
 				<p>© 2017 Executive. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<!-- //footer -->
